<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">DroidLogicTvInput</string>
    <string name="source_input_error">TV source switching to is wrong.</string>
    <string name="picture">Picture</string>
    <string name="picture_mode">Picture Mode</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="color">Color</string>
    <string name="sharpness">Sharpness</string>
    <string name="backlight">Backlight</string>
    <string name="tint">Tint</string>
    <string name="color_temperature">Color Temperature</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="dnr">DNR</string>
    <string name="settings_3d">3D Settings</string>
    <string name="sound">Sound</string>
    <string name="sound_mode">Sound Mode</string>
    <string name="treble">Treble</string>
    <string name="bass">Bass</string>
    <string name="balance">Balance</string>
    <string name="spdif">SPDIF</string>
    <string name="spdif_switch">SPDIF Switch</string>
    <string name="dialog_clarity">Dialog Clarity</string>
    <string name="bass_boost">Bass Boost</string>
    <string name="surround">Surround</string>
    <string name="virtual_surround">Virtual Surround</string>
    <string name="channel">Channel</string>
    <string name="channel_l">channel</string>
    <string name="current_channel">Current Channel</string>
    <string name="frequency">Frequency</string>
    <string name="frequency_l">frequency</string>
    <string name="quality">quality</string>
    <string name="strength">strength</string>
    <string name="type">type</string>
    <string name="service_id">service ID</string>
    <string name="pcr_id">Pcr ID</string>
    <string name="tv_channel">TV Channel</string>
    <string name="radio_channel">radio channel</string>
    <string name="frequency_band">frequency band</string>
    <string name="audio_track">Audio Track</string>
    <string name="sound_channel">Sound Channel</string>
    <string name="channel_info">Channel Info</string>
    <string name="defalut_lan">Default Language</string>
    <string name="sub_switch">Subtitle Switch</string>
    <string name="ad_switch">Audio AD Switch</string>
    <string name="ad_mix">Audio AD Mix Level</string>
    <string name="ad_list">Audio AD List</string>
    <string name="color_system">Color System</string>
    <string name="sound_system">Sound System</string>
    <string name="volume_compensate">Volume Compensate</string>
    <string name="fine_tune">Fine Tune</string>
    <string name="manual_search">Manual Search</string>
    <string name="auto_search">Auto Search</string>
    <string name="start_search">start searching</string>
    <string name="pause_search">pause searching</string>
    <string name="resume_search">resume searching</string>
    <string name="start_frequency">start frequency: </string>
    <string name="start_frequency_default">start frequency: 706MHz</string>
    <string name="start_frequency_default_atsc">start frequency: 473MHz</string>
    <string name="khz">KHz</string>
    <string name="mhz">MHz</string>
    <string name="db">dB</string>
    <string name="default_begin_frequency">42250</string>
    <string name="default_end_frequency">868250</string>
    <string name="default_begin_channel">0</string>
    <string name="searched_number">program number</string>
    <string name="channel_edit">Channel Edit</string>
    <string name="switch_channel">Switch Channel</string>
    <string name="atv_program">ATV program</string>
    <string name="mts">MTS</string>
    <string name="settings">Settings</string>
    <string name="dtv_type">DTV Type</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="menu_time">Menu Time</string>
    <string name="startup_setting">Startup Setting</string>
    <string name="dynamic_backlight">Dynamic Backlight</string>
    <string name="restore_factory">Restore Factory</string>
    <string name="standard">standard</string>
    <string name="vivid">vivid</string>
    <string name="soft">soft</string>
    <string name="monitor">monitor</string>
    <string name="user">user</string>
    <string name="warm">warm</string>
    <string name="cool">cool</string>
    <string name="auto">auto</string>
    <string name="four2three">4 : 3</string>
    <string name="panorama">panorama</string>
    <string name="full_screen">full screen</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="medium">medium</string>
    <string name="high">high</string>
    <string name="low">low</string>
    <string name="mode_lr">left right mode</string>
    <string name="mode_rl">right left mode</string>
    <string name="mode_ud">up down mode</string>
    <string name="mode_du">down up mode</string>
    <string name="mode_3d_to_2d">3D to 2D</string>
    <string name="increase">increase</string>
    <string name="decrease">decrease</string>
    <string name="default_percent">50%</string>
    <string name="music">music</string>
    <string name="news">news</string>
    <string name="movie">movie</string>
    <string name="pcm">pcm</string>
    <string name="raw">raw</string>
    <string name="pal">PAL</string>
    <string name="ntsc">NTSC</string>
    <string name="sound_system_dk">D/K</string>
    <string name="sound_system_i">I</string>
    <string name="sound_system_bg">B/G</string>
    <string name="sound_system_m">M</string>
    <string name="left_channel">left channel</string>
    <string name="right_channel">right channel</string>
    <string name="stereo">stereo</string>
    <string name="audio_outmode_mono">Mono</string>
    <string name="audio_outmode_stereo">Stereo</string>
    <string name="audio_outmode_sap">SAP</string>
    <string name="confirm">confirm</string>
    <string name="from">from: </string>
    <string name="to">to: </string>
    <string name="edit">edit</string>
    <string name="swap">swap</string>
    <string name="move">move</string>
    <string name="skip">skip</string>
    <string name="delete">delete</string>
    <string name="favourite">favourite</string>
    <string name="static_frame">static-frame</string>
    <string name="black_frame">black-frame</string>
    <string name="time_15min">15 min</string>
    <string name="time_30min">30 min</string>
    <string name="time_45min">45 min</string>
    <string name="time_60min">60 min</string>
    <string name="time_90min">90 min</string>
    <string name="time_120min">120 min</string>
    <string name="time_10s">10s</string>
    <string name="time_20s">20s</string>
    <string name="time_40s">40s</string>
    <string name="time_60s">60s</string>
    <string name="launcher">launcher</string>
    <string name="tv">TV</string>
    <string name="radio">Radio</string>
    <string name="hdmi20">HDMI 2.0</string>
    <string name="fbc_upgrade">FBC Upgrade</string>
    <string name="ensure_restore">ensure restore</string>
    <string name="ok">OK</string>
    <string name="warning">warning</string>
    <string name="prompt_def_set">restore default settings will restore the settings menu data to factory condition</string>
    <string name="prompt2">restore default settings.</string>
    <string name="cancel">cancel</string>
    <string name="error_not_number">Please input number!</string>
    <string name="error_no_channel">No channel !</string>
    <string name="error_atv_error_1">Frequency must between 44250~868250 KHz</string>
    <string name="error_atv_error_2">start frequency must less than end frequency</string>
    <string name="error_atv_error_3">start frequency must big than end frequency 1MHz</string>
    <string name="error_atv_startSearch">failed to start search channels</string>
    <string name="searched">Searched</string>
    <string name="dtmb">DTMB</string>
    <string name="dvbc">DVB-C</string>
    <string name="dvbt">DVB-T</string>
    <string name="dvbs">DVB-S</string>
    <string name="dvbc2">DVB-C2</string>
    <string name="dvbt2">DVB-T2</string>
    <string name="dvbs2">DVB-S2</string>
    <string name="atsc_t">ATSC-T</string>
    <string name="atsc_c">ATSC-C</string>
    <string name="isdb_t">ISDB-T</string>
    <string name="suspend_dialog_title">Suspend Countdown</string>
    <string name="cancel_suspend">Cancel Countdown</string>
    <string name="countdown_tips">seconds later shut down!</string>
    <string name="program_guide">Program guide</string>
    <string name="program_information">Program details</string>
    <string name="no_information">No information!</string>
    <string name="no_program">No program!</string>
    <string name="date">Date</string>
    <string name="appointed_success">Appointment success</string>
    <string name="appointed_cancel">Cancel appointment</string>
    <string name="appointed_expired">Program expired!</string>
    <string name="dtv">DTV</string>
    <string name="atv">ATV</string>
    <string name="lrc">LRC</string>
    <string name="hrc">HRC</string>
    <string name="tv_search_sys_auto">AUTO</string>
    <string name="tv_search_sys_pal">PAL</string>
    <string name="tv_search_sys_ntsc">NTSC</string>
    <string name="tv_search_sys_secam">SECAM</string>
    <string name="nosignal">No Signal</string>
    <string name="ut_channel_scan">TV channel tuner setup</string>
    <string name="ut_channel_scan_time">This may take several minutes</string>
    <string name="ut_stop_channel_scan">Pause Scan</string>
    <string name="ut_manual_scan">Manual Scan</string>
    <string name="ut_auto_scan">Auto Scan</string>
    <string name="ut_set_frequency_start">Channel</string>
    <string name="ut_set_frequency_end">to: </string>
    <string name="ut_tune_dtv">DTV</string>
    <string name="ut_tune_atv">ATV</string>
    <string name="set_frquency_channel">Please set frequency and channel first !</string>
    <string name="set_channel">Please set channel first !</string>
    <string name="set_frequency">Please set frequency first !</string>
    <string name="tv_mode_option">Mode Option:</string>
    <string name="tv_country">Country</string>
    <string name="tv_america">America</string>
    <string name="tv_india">India</string>
    <string name="tv_indonesia">Indonesia</string>
    <string name="tv_mexico">Mexico</string>
    <string name="tv_germany">Germany</string>
    <string name="tv_china">China</string>
    <string name="tv_search_mode">Mode</string>
    <string name="tv_search_mode_manual">Manual</string>
    <string name="tv_search_mode_auto">Auto</string>
    <string name="tv_search_type">Type</string>
    <string name="tv_search_type_atv">ATV</string>
    <string name="tv_search_type_dtmb">DTMB</string>
    <string name="tv_search_type_dvb_t">DVB-T</string>
    <string name="tv_search_type_dvb_c">DVB-C</string>
    <string name="tv_search_type_dvb_s">DVB-S</string>
    <string name="tv_search_type_atsc_t">ATSC-T</string>
    <string name="tv_search_type_atsc_c">ATSC-C</string>
    <string name="tv_search_type_atsc_c_auto">ATSC-C(auto)</string>
    <string name="tv_search_type_atsc_c_standard">ATSC-C(std)</string>
    <string name="tv_search_type_atsc_c_lrc">ATSC-C(lrc)</string>
    <string name="tv_search_type_atsc_c_hrc">ATSC-C(hrc)</string>
    <string name="tv_search_option">Search Option:</string>
    <string name="tv_search_order">Order</string>
    <string name="tv_search_atv_clolor">ATV Color System</string>
    <string name="tv_search_atv_clolor_auto">AUTO</string>
    <string name="tv_search_atv_clolor_pal">PAL</string>
    <string name="tv_search_atv_clolor_ntsc">NTSC</string>
    <string name="tv_search_atv_clolor_secam">SECAM</string>
    <string name="tv_search_atv_sound">ATV Sound System</string>
    <string name="tv_search_atv_sound_bg">B/G</string>
    <string name="tv_search_atv_sound_dk">D/K</string>
    <string name="tv_search_atv_sound_i">I</string>
    <string name="tv_search_atv_sound_l">L</string>
</resources>