<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:key="content_title"
        android:title="@string/channel" >
    </Preference>

    <Preference
        android:key="current_channel"
        android:title="@string/current_channel" >
    </Preference>

    <Preference
        android:key="frequency"
        android:title="@string/frequency" >
    </Preference>

    <Preference
        android:key="color_system"
        android:title="@string/color_system" >
    </Preference>

    <Preference
        android:key="sound_system"
        android:title="@string/sound_system" >
    </Preference>

    <Preference
        android:key="volume_compensate"
        android:title="@string/volume_compensate" >
    </Preference>

    <Preference
        android:key="fine_tune"
        android:title="@string/fine_tune" >
    </Preference>

    <Preference
        android:key="manual_search"
        android:title="@string/manual_search" >
    </Preference>

    <Preference
        android:key="auto_search"
        android:title="@string/auto_search" >
    </Preference>

    <Preference
        android:key="channel_edit"
        android:title="@string/channel_edit" >
    </Preference>

    <Preference
        android:key="switch_channel"
        android:title="@string/switch_channel" >
    </Preference>

</PreferenceScreen>
