<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_marginLeft="31dp"
        android:paddingLeft="15dp"
        android:text="@string/manual_search"
        android:textSize="27sp"
        android:textColor="@color/color_text_item"
        />
    <RelativeLayout
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="31dp"
        >
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:orientation="horizontal"
	        >
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/from"
		        android:textSize="24sp"
		        android:textColor="@color/color_text_prompt"
		        />
		    <EditText
                android:id="@+id/manual_search_edit_from"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="5dp"
		        android:textSize="24sp"
		        android:textColor="@color/color_text_edit"
		        android:textColorHint="@color/color_text_hint"
		        android:hint="@string/default_begin_frequency"
		        />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/khz"
		        android:textSize="20sp"
		        android:textColor="@color/color_text_prompt"
		        />
	    </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        >
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:orientation="horizontal"
	        >
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/to"
		        android:textSize="24sp"
		        android:textColor="@color/color_text_prompt"
		        />
		    <EditText
                android:id="@+id/manual_search_edit_from"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="5dp"
		        android:textSize="24sp"
		        android:textColor="@color/color_text_edit"
		        android:textColorHint="@color/color_text_hint"
		        android:hint="@string/default_end_frequency"
		        />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/khz"
		        android:textSize="20sp"
		        android:textColor="@color/color_text_prompt"
		        />
	    </LinearLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/sound_system_dk"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="31dp"
        android:gravity="center"
        android:background="@drawable/item_background"
        android:focusable="true"
        android:text="@string/start_search"
        android:textSize="26sp"
        android:textColor="@color/color_text_item"
        />
</LinearLayout>

