<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/button_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/transparent"
        android:src="@drawable/button_picture"
        />
    <TextView
        android:id="@+id/title_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/picture"
        android:textSize="25sp"
        android:textColor="@color/color_text_title"
        />

    <ImageButton
        android:id="@+id/button_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/transparent"
        android:src="@drawable/button_sound"
        />
    <TextView
        android:id="@+id/title_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sound"
        android:textSize="25sp"
        android:textColor="@color/color_text_title"
        />

    <ImageButton
        android:id="@+id/button_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/transparent"
        android:src="@drawable/button_channel"
        />
    <TextView
        android:id="@+id/title_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/channel"
        android:textSize="25sp"
        android:textColor="@color/color_text_title"
        />

    <ImageButton
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/transparent"
        android:src="@drawable/button_settings"
        />
    <TextView
        android:id="@+id/title_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/settings"
        android:textSize="25sp"
        android:textColor="@color/color_text_title"
        />
</LinearLayout>
